--- a/styles/architecrs.css
+++ b/styles/architecrs.css
@@ -94,6 +94,31 @@ main > section{
 #quick-list{
     font-weight: 500px;
 }
+.facts-container{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+}
+/* fact related card */
+.fact-card{
+    border: 1px solid #ff900e;
+    height: 240px;
+    width: 240px;
+    border-radius: 8px;
+    align-items: center;
+    text-align: center;
+    justify-content:center;
+}
+.fact-number{
+    font-size: 2.8rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
 @media screen and (max-width: 576px) {
     .navbar,
     .nav-link,
@@ -102,12 +127,39 @@ main > section{
         flex-direction: column;
 
     }
-    .team-img-container{
-        grid-template-columns: repeat(1,1fr);
+    .team-img-container,
+    .facts-container,
+    .sponsor-companies
+    {
+        grid-template-columns: 1fr;
+    }
+    .facts-container,
+    .sponsor-companies
+    {
+       justify-items: center;
+       gap: 24px;
     }
     .our-features{
         margin-left: 200px;
     }
+}
+.fact-description{
+    max-width: 540px;
+}
+/* sposor related info */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: 1fr; 
+    justify-content: center;
+    gap: 50px;
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
 }
 /* medium size device */
 @media screen and (min-width: 576px) and (max-width: 992px){
@@ -116,5 +168,11 @@ main > section{
     }
     .our-features{
         margin: 0 auto;
+    }
+    .sponsor-companies,
+    .facts-container{
+        grid-template-columns: repeat(3,1fr);
+        gap: 50px;
+        justify-items: center;
     }
 }
