--- a/styles/architecrs.css
+++ b/styles/architecrs.css
@@ -119,6 +119,26 @@ main > section{
     font-weight: 600;
     margin-top: 10px;
 }
+.features{
+    gap: 140px;
+}
+#feature-title-section{
+    border-left: 5px solid #ff900e;
+    padding: 20px;
+}
+.feature-card{
+     padding: 30px;
+     border-radius: 8px;
+    box-shadow: 0 4px 30px 0 rgba(0,0,0,.06);
+    margin-bottom: 20px;
+}
+.feature-card .feature-title{
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 0px;
+    margin-bottom: 0px;
+   
+}
 @media screen and (max-width: 576px) {
     .navbar,
     .nav-link,
